# nanoros_beginner_tutorial

beginner_tutorial_msgs/: generate_packer_code.sh
simple_inout/: CMakeLists.txt  console_in_node.cpp  console_out_node.cpp
talker_listener/: CMakeLists.txt  listener.cpp  talker.cpp
